# bowling_target_nav

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
arduino/: bowling_motor_controller.ino
bowling_target_nav/: __init__.py
bowling_target_nav/core/: __init__.py  config.py  events.py  state_machine.py
bowling_target_nav/detectors/: __init__.py  base.py  bin_detector.py  detector_base.py  drp_binary_detector.py  factory.py  mock_detector.py  yolo_detector.py  yolo_onnx_detector.py
bowling_target_nav/gui/: __init__.py  display.py  main_window.py  settings_window.py  theme.py
bowling_target_nav/gui/panels/: __init__.py  camera_panel.py  map_panel.py
bowling_target_nav/hardware/: __init__.py  arduino.py  arduino_bridge.py  camera.py  lidar.py
bowling_target_nav/nav/: __init__.py  navigator.py  target_selector.py
bowling_target_nav/nodes/: __init__.py  arduino_driver_node.py  autonomous_explorer.py  main_gui.py  map_viewer_node.py  odometry_node.py  slam_camera_gui.py  target_follower_node.py  target_gui_node.py  vision_node.py
bowling_target_nav/state/: __init__.py  detection_store.py  nav_store.py  sensor_store.py  shared_state.py
bowling_target_nav/threads/: __init__.py  camera_worker.py  ros_node.py
bowling_target_nav/utils/: __init__.py  distance_estimator.py
config/: cartographer.lua  mapping.rviz  nav2.rviz  nav2_params.yaml  robot_config.yaml  target_nav_params.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  GUI_GUIDE.md  HARDWARE_SETUP.md  HOW_IT_WORKS.md  quick_start_guide.html  technical_guide.html
drpai_app/: CMakeLists.txt  build.sh  config.ini  labels.txt  package.sh  run.sh
drpai_app/src/: camera_capture.cpp  camera_capture.h  define.h  display.cpp  display.h  drpai_inference.cpp  drpai_inference.h  main.cpp  yolo_postprocess.cpp  yolo_postprocess.h
launch/: autonomous.launch.py  bowling_target_nav.launch.py  bringup.launch.py  mapping.launch.py  navigation.launch.py  record.launch.py  slam.launch.py
maps/: default_map.yaml
scripts/: bowling_gui.sh  bowling_launcher.py  install_autostart.sh  install_nav2.sh  nav_to_pose.sh  remote_desktop.py  robot.service  robot_autostart.sh  run_mapping.sh  run_slam_camera.sh  run_tests.sh  run_vision.sh  save_map.sh  setup_and_run.sh  start_pin_navigation.sh  start_robot.sh  test_lidar.sh  test_lidar_direct.py  v2n_master_setup.sh  v2n_setup.sh
test/: __init__.py  arduino_remote_gui.py  arduino_remote_server.py  conftest.py  test_arduino.py  test_camera.py  test_full_system.py  test_lidar.py  test_lidar_camera.py
test/unit/: __init__.py  test_config.py  test_detectors.py  test_hardware.py  test_state_machine.py
test/utils/: __init__.py  debug_logger.py  hardware_checker.py
tools/: pc_robot_controller.py  pc_robot_controller_standalone.py  run_controller.sh
urdf/: v2n_robot.urdf
